package json added an https to the path

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://kitfud.github.io/KitsArtSinglePageApp",
+  "homepage":"https://kitfud.github.io/KitsArtSinglePageApp",
   "name": "creap",
   "version": "0.1.0",
   "private": true,
